# game-engine

./: Cargo.toml  architecture.md  rust-toolchain.toml
rsc/: suzanne.mtl
src/: lib.rs  main.rs
src/renderer/: camera.rs  instance.rs  mod.rs  model.rs  resources.rs  shader.wgsl  texture.rs
