[package]
name = "game-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["bytemuck_derive"] }
cgmath = "0.18.0"
env_logger = "0.11.9"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.13"
tobj = { version = "4.0.3", features = ["async"] }

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["jpeg", "png"]

[build-dependencies]
anyhow = "1.0.102"
fs_extra = "1.3.0"
glob = "0.3.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
